update wa test