@@ -1,8 +1,9 @@
  ./stop_server.sh
-sudo rm -rf ../iotdb-add_tlsm_compaction/distribution/target/apache-iotdb-0.12.1-SNAPSHOT-all-bin/apache-iotdb-0.12.1-SNAPSHOT-all-bin/data &&
+sudo rm -rf ../iotdb-with_seperation_policy/apache-iotdb-0.12.1-SNAPSHOT-all-bin/data &&
 time=$(date "+%Y%m%d-%H%M%S")
-nohup ../iotdb-add_tlsm_compaction/distribution/target/apache-iotdb-0.12.1-SNAPSHOT-all-bin/apache-iotdb-0.12.1-SNAPSHOT-all-bin/sbin/start-server.sh > tlsm_$2_$3_server.log &
+nohup ../iotdb-with_seperation_policy/apache-iotdb-0.12.1-SNAPSHOT-all-bin/sbin/start-server.sh > tlsm_$1_$2_$3_server.log &
 sleep 5
-java -jar write_iotdb-1.0-SNAPSHOT.jar 127.0.0.1 6667 root.storage_group $1 > tlsm_$2_$3_write.log
-../iotdb-add_tlsm_compaction/distribution/target/apache-iotdb-0.12.1-SNAPSHOT-all-bin/apache-iotdb-0.12.1-SNAPSHOT-all-bin/sbin/start-cli.sh -e "flush"
+csv_path="mu-${2}-sigma-${3}-interval-${1}-num-1000000.csv"
+java -jar -Djava.ext.dirs=../iotdb-with_seperation_policy/apache-iotdb-0.12.1-SNAPSHOT-all-bin/lib pure_write.jar ${csv_path} > tlsm_$1_$2_$3_write.log
+../iotdb-with_seperation_policy/apache-iotdb-0.12.1-SNAPSHOT-all-bin/sbin/start-cli.sh -e "flush"
 sleep 5
